ya pueso serializar el json en los objetos libro y escritor